Update project API and UX adjustments
